Update: (Fixes #859) Fix whitespace issue with inline-scroller

--- a/src/scss/lexicon-base/_dropdowns.scss
+++ b/src/scss/lexicon-base/_dropdowns.scss
@@ -133,9 +133,9 @@
 // Dropdown inline-scroller
 
 .inline-scroller {
-	height: 125px;
 	list-style: none;
 	margin: 0;
+	max-height: 125px;
 	overflow: auto;
 
 	-webkit-overflow-scrolling: touch;
